--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- prettier-ignore -->
-    <meta name="description" content="nf-core/chipseqcr: Nextflow pipeline for ChIP-seq and CUT&RUN analysis based on an nf-core template" />
-    <title>nf-core/chipseqcr Pipeline Report</title>
+    <meta name="description" content="m-mahgoub/nf-core-chipseqcr: Nextflow pipeline for ChIP-seq and CUT&RUN analysis based on an nf-core template" />
+    <title>m-mahgoub/nf-core-chipseqcr Pipeline Report</title>
   </head>
   <body>
     <div style="font-family: Helvetica, Arial, sans-serif; padding: 30px; max-width: 800px; margin: 0 auto">
       <img src="cid:nfcorepipelinelogo" />
 
-      <h1>nf-core/chipseqcr v${version}</h1>
+      <h1>m-mahgoub/nf-core-chipseqcr v${version}</h1>
       <h2>Run Name: $runName</h2>
 
       <% if (!success){ out << """
@@ -27,7 +27,7 @@
           border-radius: 4px;
         "
       >
-        <h4 style="margin-top: 0; color: inherit">nf-core/chipseqcr execution completed unsuccessfully!</h4>
+        <h4 style="margin-top: 0; color: inherit">m-mahgoub/nf-core-chipseqcr execution completed unsuccessfully!</h4>
         <p>The exit status of the task that caused the workflow execution to fail was: <code>$exitStatus</code>.</p>
         <p>The full error message was:</p>
         <pre style="white-space: pre-wrap; overflow: visible; margin-bottom: 0">${errorReport}</pre>
@@ -44,7 +44,7 @@
           border-radius: 4px;
         "
       >
-        nf-core/chipseqcr execution completed successfully!
+        m-mahgoub/nf-core-chipseqcr execution completed successfully!
       </div>
       """ } %>
 
@@ -104,8 +104,8 @@ $commandLine</pre
         </tbody>
       </table>
 
-      <p>nf-core/chipseqcr</p>
-      <p><a href="https://github.com/nf-core/chipseqcr">https://github.com/nf-core/chipseqcr</a></p>
+      <p>m-mahgoub/nf-core-chipseqcr</p>
+      <p><a href="https://github.com/m-mahgoub/nf-core-chipseqcr">https://github.com/m-mahgoub/nf-core-chipseqcr</a></p>
     </div>
   </body>
 </html>
